OP-1670: Fix carousel pager alignment in IE7.

--- a/web-app/themes/common/stylesheets/_dashboardSwitcher.scss
+++ b/web-app/themes/common/stylesheets/_dashboardSwitcher.scss
@@ -13,6 +13,8 @@
     .x-window-header {
         margin-bottom: 5px;
         width: 100% !important;
+        *overflow: hidden;
+        zoom: 1;
         
         .x-window-header-text {
 			font-size: 18px;
@@ -142,6 +144,7 @@
             @include box-shadow(none);
 
             background: transparent !important;
+            *background: inherit !important;
             border: 0px;
             margin-left: 72px;
             margin-right: 75px;
@@ -153,6 +156,14 @@
 
     > .bx-wrapper .bx-pager, > .bx-wrapper .bx-controls-auto {
         bottom: -20px;
+        zoom: 1;
+        *text-align: left;
+        *display: inline;
+
+        .bx-pager-item {
+            zoom: 1;
+            *display: inline;
+        }
     }
 
     > .bx-wrapper {
@@ -171,46 +182,56 @@
     > .bx-viewport
     > .all-dashboards
     > .bx-slide:not(.bx-clone)
-    > .stack-dashboards-container
-    > .stack-dashboards {
+    > .stack-dashboards-container {
 
-    > .bx-wrapper {
-        min-height: 105px !important;
-        max-height: 105px !important;
-        width: 400px !important;
-        margin-bottom: 30px;
+        > .stack-dashboards {
 
-        > .bx-viewport {
-
-            .dashboard {
-                padding-top: 5px;
-                margin-bottom: 0px;
-                width: 80px;
-            }
-            @include box-shadow(none);
-
-            background: transparent !important;
-            margin-left: 5px;
-            margin-right: 20px;
-            border: 0px;
-            width: 400px !important;
-            height: 105px !important;
+        > .bx-wrapper {
             min-height: 105px !important;
-        }
-    }
+            max-height: 105px !important;
+            width: 400px !important;
+            margin-bottom: 30px;
 
-    > .bx-wrapper .bx-pager, > .bx-wrapper .bx-controls-auto {
-        bottom: -20px;
-    }
+            > .bx-viewport {
+                @include box-shadow(none);
 
-    > .bx-wrapper {
-        .bx-prev {
-            left: -50px !important;
-            top: 65%;
+                background: transparent !important;
+                margin-left: 5px;
+                margin-right: 20px;
+                border: 0px;
+                width: 400px !important;
+                height: 105px !important;
+                min-height: 105px !important;
+
+                .dashboard {
+                    padding-top: 5px;
+                    margin-bottom: 0px;
+                    width: 80px;
+                }
+            }
         }
-        .bx-next {
-            right: -50px !important;
-            top: 65%;
+
+        > .bx-wrapper .bx-pager, > .bx-wrapper .bx-controls-auto {
+            bottom: -20px;
+            zoom: 1;
+            *text-align: left;
+            *display: inline;
+
+            .bx-pager-item {
+                zoom: 1;
+                *display: inline;
+            }
+        }
+
+        > .bx-wrapper {
+            .bx-prev {
+                left: -50px !important;
+                top: 65%;
+            }
+            .bx-next {
+                right: -50px !important;
+                top: 65%;
+            }
         }
     }
 }
@@ -243,6 +264,7 @@
         margin-left: auto;
         margin-right: auto;
         width: 100%;
+        *overflow: hidden;
         
         .thumb {
             height: 64px;
@@ -267,7 +289,6 @@
         margin-top: 2px;
         margin-left: auto;
         margin-right: auto;
-        //font-size: 10px;
     }
     
     &:hover {
